# Adaptive_Study

./: README.MD  agent.py  config.py  dynamics.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py
